Add evento AnimalRejeitadoNoEmbarque
